Release notes for SIP Express Router (ser)
***********************************************

$Id: NEWS,v 1.62 2007/05/02 16:57:07 andrei Exp $


2.1.0 changes

modules:
 - tm        - new onsend callbacks support (require defining TMCB_ONSEND prior
               to compiling tm)
             - behaviour when receiving a CANCEL which doesn't match any 
               transaction can be selected using the unmatched_cancel param.
             - params: 
                        - unmatched_cancel - selects between forwarding cancels
                           that do not match any transaction statefully (0, 
                           default value), statelessly (1) or dropping them
                           (2). Note that the statefull forwarding has an 
                           additional hidden advantage: tm will be able to
                           recognize INVITEs that arrive after their CANCEL.
                           Note also that this feature could be used to try
                           a memory exhaustion DOS attack against a proxy that
                           authenticates all requests, by continuously flooding
                           the victim with CANCELs to random destinations 
                           (since the CANCEL cannot be authenticated, each
                           received bogus CANCEL will create a new transaction 
                           that will live by default 30s).


2.0.0 changes


new archs:


modules:
 - tls        - new module that enables tls support (set enable_tls=yes
                in the config file and load the tls module)
 - ctl        - new  fifo/unixsocket/xmlrpc like module, using a space 
                efficient binary encoding for the requests.
                It supports multiple clients on tcp, udp, unix stream or
                unix datagram modes. By default (no modparams) it opens
                one unix stream control socket in /tmp/ser_ctl.