@@ -1,5 +1,5 @@
 /*
- * $Id: cfg.lex,v 1.93 2007/02/10 18:52:48 andrei Exp $
+ * $Id: cfg.lex,v 1.94 2007/05/30 12:48:24 hscholz Exp $
  *
  * scanner for cfg files
  *
@@ -272,6 +272,8 @@ TCP_CONNECT_TIMEOUT	"tcp_connect_timeout"
 TCP_CON_LIFETIME	"tcp_connection_lifetime"
 TCP_POLL_METHOD		"tcp_poll_method"
 TCP_MAX_CONNECTIONS	"tcp_max_connections"
+TCP_SOURCE_IPV4		"tcp_source_ipv4"
+TCP_SOURCE_IPV6		"tcp_source_ipv6"
 DISABLE_TLS		"disable_tls"|"tls_disable"
 ENABLE_TLS		"enable_tls"|"tls_enable"
 TLSLOG			"tlslog"|"tls_log"
@@ -501,6 +503,10 @@ EAT_ABLE	[\ \t\b\r]
 									return TCP_POLL_METHOD; }
 <INITIAL>{TCP_MAX_CONNECTIONS}	{ count(); yylval.strval=yytext;
 									return TCP_MAX_CONNECTIONS; }
+<INITIAL>{TCP_SOURCE_IPV4}		{ count(); yylval.strval=yytext;
+									return TCP_SOURCE_IPV4; }
+<INITIAL>{TCP_SOURCE_IPV6}		{ count(); yylval.strval=yytext;
+									return TCP_SOURCE_IPV6; }
 <INITIAL>{DISABLE_TLS}	{ count(); yylval.strval=yytext; return DISABLE_TLS; }
 <INITIAL>{ENABLE_TLS}	{ count(); yylval.strval=yytext; return ENABLE_TLS; }
 <INITIAL>{TLSLOG}		{ count(); yylval.strval=yytext; return TLS_PORT_NO; }
